09-Kubernetes/Day-23-Networking/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    role: backend
spec:
  containers:
  - name: backend
    image: nginx
