09-Kubernetes/Day-23-Networking/database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  labels:
    role: database
spec:
  containers:
  - name: database
    image: mysql:5.7
