09-Kubernetes/Day-23-Networking/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    role: frontend
spec:
  containers:
  - name: frontend
    image: nginx
